# my_vector_graphic_editor

./: .gitignore  Cargo.toml  Flower-demo.mvg  Makefile.toml  README.md  decisions.md
.github/workflows/: main-test.yml  rust.yml
common/: Cargo.toml
common/src/: fill.rs  lib.rs  macros.rs  mat2x2.rs  math.rs  types.rs  vec2.rs
common/src/pures/: affine.rs  mat2x2.rs  mat2x3.rs  mod.rs  vec2.rs
common/src/types/: coord.rs  mod.rs  vector.rs
data/: test1.vgcu
database/: Cargo.toml
database/src/: lib.rs
database/src/commands/: add_coord.rs  change_color.rs  change_stroke_color.rs  change_stroke_size.rs  difference.rs  intersection.rs  mod.rs  move_coords.rs  move_layer.rs  remove_coord.rs  toggle_handle.rs  union.rs
database/src/integration/: mod.rs
database/src/math/: curve.rs  curve2.rs  curve3.rs  line_different_side.rs  line_intersection.rs  mod.rs
database/src/scene/: id.rs  mod.rs  render.rs  tree_view.rs
database/src/scene/render/: tiny_skia.rs  transparent_grid.rs
database/src/scene/shape/: coord.rs  cubic_path.rs  curve.rs  mod.rs
database/src/scene/shape/boolean/: basic_test.rs  difference.rs  intersection.rs  mark_entry.rs  mod.rs  union.rs
database/src/user_context/: api.rs  boolean.rs  camera.rs  mod.rs  ui.rs  user_selection.rs
database/src/user_context/commands/: add_coord.rs  change_color.rs  mod.rs  move_coords.rs  move_layer.rs  remove_coord.rs  toggle_handle.rs  toogle_handle.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
editor/: Cargo.toml  README.md
editor/src/: canvas_camera.rs  grid.rs  main.rs  move_coord.rs  scene.rs
editor/src/scene/: canvas_camera.rs  coord_position_tooltip.rs  events.rs  mod.rs  move_coord.rs  selected_shape.rs  user_selection.rs  vgc_render.rs
editor/src/scene/functionality/: create_update_shape.rs  mod.rs  move_coord.rs
editor/src/styles/: mod.rs
editor/src/toolbars/: left.rs  mod.rs  top.rs
editor/src/utils/: file_explorer.rs  mod.rs
iced_test/: Cargo.toml  README.md
iced_test/src/: grid.rs  main.rs
iced_test/src/toolbars/: left.rs
macros/: Cargo.toml
macros-test/src/: lib.rs
macros/src/: lib.rs
makefile/: build.toml  clean.toml  lint.toml  serve.toml  test.toml
old_vgc/: Cargo.toml
old_vgc/data/: test1.vgcu
old_vgc/src/: coord.rs  main.rs  read_common.rs  read_content.rs  render.rs  vcg_struct.rs
src/: main.rs  read_common.rs  read_content.rs  read_file.rs  read_header.rs  render.rs  vcg_struct.rs
vgc/: .gitignore  Cargo.toml
vgc/src/: coord.rs  curve.rs  curve2.rs  db.rs  fill.rs  instructions.rs  lib.rs  render.rs  serialization.rs  shape.rs  shape_boolean.rs  vcg_struct.rs  vgc_struct.rs
vgc/src/shape/: mod.rs  new.rs
vgc/src/shape/boolean/: difference.rs  intersection.rs  mod.rs  union.rs
view/: .eslintrc.json  .prettierrc.toml  README.md  angular.json  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json  vite.config.mts
view/src/: index.html  main.ts  styles.scss  test-setup.ts
view/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  events.service.ts  modal.service.ts  move-coord.service.ts  render.service.ts  scenes.service.ts  selection.service.ts
view/src/app/components/canvas/: canvas.component.html  canvas.component.scss  canvas.component.ts
view/src/app/components/color-picker/: color-picker.component.html  color-picker.component.scss  color-picker.component.ts
view/src/app/components/right-bar/: right-bar.component.html  right-bar.component.scss  right-bar.component.ts
view/src/app/components/scene-selector/: scene-selector.component.html  scene-selector.component.scss  scene-selector.component.ts
view/src/app/components/scene-view/: scene-view.component.html  scene-view.component.ts
view/src/app/components/tools-bar/: tools-bar.component.html  tools-bar.component.scss  tools-bar.component.spec.ts  tools-bar.component.ts
view/src/app/config/: toolsbar-svg-btn.ts
view/src/app/functionality/: Functionality.ts  add-remove-coord.service.ts  camera.service.ts  camera.ts  draw-shape.service.ts  functionality.ts  move-coord.service.ts  move-coord.ts  toggle-handle.service.ts
view/src/app/interface/: Button.ts
view/src/app/layout/menu-bar/: menu-bar.component.ts
view/src/app/layout/tools-bar/: tools-bar.component.html  tools-bar.component.ts
view/src/app/layout/tools-properties-bar/: tools-properties-bar.component.html  tools-properties-bar.component.scss  tools-properties-bar.component.ts
view/src/app/menu-bar/: menu-bar.component.html  menu-bar.component.ts
view/src/app/mouse-info/: mouse-info.service.ts
view/src/app/mouse-info/mouse-info/: mouse-info.component.html  mouse-info.component.scss  mouse-info.component.ts
view/src/app/new-scene/: new-scene.component.html  new-scene.component.scss  new-scene.component.ts
view/src/app/number-input/: number-input.component.html  number-input.component.ts
view/src/app/save-load/: save-load.component.html  save-load.component.scss  save-load.component.ts
view/src/app/scene/: debug.service.ts  events.service.ts  render.service.ts  scene.ts  scenes.service.ts  selection.service.ts
view/src/app/scene/canvas/: canvas.component.ts
view/src/app/scene/scene-view/: scene-view.component.html  scene-view.component.scss  scene-view.component.ts
view/src/app/tools-bar/: tools-bar.component.html  tools-bar.component.scss  tools-bar.component.ts
view/src/app/utilities/client/: common.ts
view/src/app/utilities/color-picker/: color-picker.component.html  color-picker.component.ts
view/src/app/utilities/number-input/: number-input.component.html  number-input.component.scss  number-input.component.ts
view/src/environments/: environment.development.ts  environment.ts
view/src/styles/: theme.scss
wasm_client/: Cargo.toml
wasm_client/src/: api.rs  camera_client.rs  canvas_context_2d_render.rs  lib.rs  rendering.rs
wasm_vgc/: Cargo.toml  readme.md
wasm_vgc/src/: api.rs  camera.rs  canvas_context_2d_render.rs  lib.rs  user_selection.rs
(+9 files in other folders)
