[workspace]
resolver = "2"
members = ["common", "desktop", "database", "wasm_client", "macros", "macros-test"]

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0.40"
log = "0.4.21"
postcard = { version = "1.1.3", features = ["alloc"] }
roots = "0.0.8"
serde = { version = "1.0.204", features = ["derive"] }
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = { version = "0.2.89" }
