[package]
name = "common"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = { version = "0.2.89" }
serde = { version = "1.0.130", features = ["derive"], optional = true }
float-cmp = "0.9.0" # for testing

[dev-dependencies]


[features]
default = ["serialization"]
serialization = ["serde"]
