[package]
name = "common"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = { version = "0.2.89" }
serde = { version = "1.0.130", features = ["derive"], optional = true }
float-cmp = "0.9.0"
tsify-next = { version = "0.5.3", features = ["js"], optional = true }

[features]
default = ["serialization", "bindgen"]
serialization = ["serde"]
bindgen = []
ts = ["tsify-next", "serialization"]
