[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomen = "1.1.0"
common = { path = "../common", default-features = false, features = ["tsify"] }
log = "0.4.21"

[dev-dependencies]
float-cmp = "0.9.0"
