[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", features = ["alloc"] }
polynomen = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
common = { path = "../common", default-features = false, features = ["ts"] }
log = "0.4.21"

wasm-bindgen = { version = "0.2.89" }
tsify-next = { version = "0.5.3", features = ["js"] }

[dev-dependencies]
float-cmp = "0.9.0"
env_logger = "0.11.5"
