[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
postcard.workspace = true
polynomen.workspace = true
serde.workspace = true
tsify-next.workspace = true
wasm-bindgen.workspace = true

tiny-skia = { version = "0.11.4", optional = true }

common = { path = "../common" }
macros = { path = "../macros" }

[dev-dependencies]
float-cmp = "0.9.0"
env_logger = "0.11.5"

[features]
default = []
tiny-skia-renderer = ["tiny-skia"]
