[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug", "image"] }
iced_aw = {version = "0.6.0", features = ["color_picker"]}
vgc = { path="../vgc"}
tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"
