[package]
name = "vgc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
tiny-skia = "0.11.1"

iced = { version = "0.10.0", features = ["canvas"] }
polynomen = "1.1.0"

serde = { version = "1.0.130", features = ["derive"], optional = true }

[features]
default = ["serialization"]
serialization =  ["serde"]