[package]
name = "vgc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomen = "1.1.0"

tiny-skia = {version="0.11.1", optional = true}

serde = { version = "1.0.130", features = ["derive"], optional = true }

[dev-dependencies]
postcard = {version = "1.0.7",  features = ["alloc"]}
float-cmp = "0.9.0" 

[features]
default = ["serialization", "tiny-skia_renderer"]
serialization =  ["serde"]
tiny-skia_renderer = ["tiny-skia"]