[package]
name = "wasm_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
postcard.workspace = true
serde.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

common = { path = "../common" }
database = { path = "../database" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_log = "1.0.0"
console_error_panic_hook = { version = "0.1.7" }
js-sys = { version = "0.3.66" }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.66"
features = [
    "CanvasRenderingContext2d",
    "CanvasWindingRule",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
]

[dev-dependencies]
float-cmp = "0.9.0" # for testing

