[package]
name = "wasm_vgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
equation-solver = "0.1.1"
js-sys = { version = "0.3", optional = true }
tracing = "0.1"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
vgc = {path = "../vgc", features= ["tiny-skia_renderer"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["js"]
full = ["js", "web"]
js = ["console_error_panic_hook", "js-sys", "wasm-bindgen", "wasm-bindgen-futures"]
web = ["web-sys"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

