[package]
name = "wasm_vgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.66" }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
vgc = {path = "../vgc"}

[dependencies.web-sys]
version = "0.3.66"
features = [
  'CanvasRenderingContext2d',
]
